--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "gh-pages": "^3.2.3",
+    "http-server": "^14.1.0",
     "three": "^0.127.0"
   },
   "devDependencies": {
